<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_aluno_nome"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtNomeAluno"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_aluno_idade"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtIdadeAluno"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_aluno_altura"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtAlturaAluno"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_aluno_peso"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtPesoAluno"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_usuario"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtUsuarioAluno"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_senha"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtSenhaAluno"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sim"
                android:id="@+id/cb_sim"
                android:textSize="20dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Não"
                android:id="@+id/cb_nao"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox2"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sim"
                android:id="@+id/cb2_sim"
                android:textSize="20dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Não"
                android:id="@+id/cb2_nao"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButton"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButton1"
                android:id="@+id/cb_perder"
                android:textSize="20dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButton2"
                android:id="@+id/cb_ganhar"
                android:textSize="20dp"/>


            <Button
                android:id="@+id/bt_salvar"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:onClick="salvar"
                android:text="@string/bt_save"
                android:background="@drawable/bt_custom2"/>

            <Button
                android:id="@+id/bt_voltar"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:onClick="voltar"
                android:text="Voltar"
                android:background="@drawable/bt_custom3"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>