<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaLogin"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_login"
                android:textSize="20dp"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:paddingTop="30dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edt_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_senha"
                android:textSize="20dp"
                android:textColor="#000000"
                android:paddingTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edt_senha"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/bt_logar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bt_custom2"
                android:onClick="conectar"
                android:text="@string/bt_conectar"
                android:textColor="#000000" />

            <Button
                android:id="@+id/bt_cadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:onClick="cadastrar"
                android:text="@string/bt_cadastrar"
                android:textColor="#000000" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>