<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaOpcoes"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_inicial"
                android:layout_gravity="center"
                android:textSize="30dp"
                android:layout_marginTop="60px"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/bt_personal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_button"
                android:onClick="personal"
                android:text="@string/bt_personal" />

            <Button
                android:id="@+id/bt_aluno"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_button"
                android:onClick="aluno"
                android:text="@string/bt_aluno" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>