<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPersonal"
    android:background="@color/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_aluno_nome"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtNomePersonal"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_aluno_idade"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtIdadePersonal"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_usuario"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtUsuarioPersonal"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_senha"
                    android:textColor="#000000"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/edtSenhaPersonal"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_salvar"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_custom2"
                android:onClick="salvar"
                android:text="@string/bt_save" />

            <Button
                android:id="@+id/bt_voltar"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_custom3"
                android:onClick="voltar"
                android:text="Voltar" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>